Getting ready for 1.0 [Read Desc For Changes]
Added Logger and Debug
Added Timeouts
Fixed RemoveClient  not removing the active client,
Added Settings and Config Key Value IPC
Removed Unused Code
Stuff that I forgot

--- a/config.json
+++ b/config.json
@@ -1,7 +1,4 @@
 {
-    "theme": "neonDark",
-    "mode": "applemusic",
-    "showTTY": true,
-    "errNote": true,
-    "RPCServer": true
+    "debug": true,
+    "debugNotification": false
 }
