--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
             "*": [
                 "node_modules/*"
             ]
-        }
+        },
+        "target": "ES6"
     },
     "include": [
         "src/**/*"
