--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@electron-forge/maker-rpm": "^7.8.0",
     "@electron-forge/maker-squirrel": "^7.8.0",
     "@electron-forge/maker-zip": "^7.8.0",
+    "@eslint/js": "^9.24.0",
     "@types/discord-rpc": "^4.0.9",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
@@ -30,13 +31,14 @@
     "@typescript-eslint/parser": "^8.29.1",
     "electron": "^35.1.4",
     "eslint": "^9.24.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1",
+    "oms-sharedtypes": "^1.3.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "electron-squirrel-startup": "^1.0.1",
     "express": "^5.1.0",
-    "oms-sharedtypes": "^1.3.0",
     "ws": "^8.18.1"
   }
 }
