⚙️Plugin settings ui

--- a/systen.config.json
+++ b/systen.config.json
@@ -3,5 +3,6 @@
     "debug": false,
     "webDisplayIPs": false,
     "webDisplayUUIDs": false,
-    "debugNotification": false
+    "debugNotification": false,
+    "webDisplayService": false
 }
